samples/_failures_safe/1761656432_0a7717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f08f8e0.c: In function ‘parser_init’:
./samples/SAFE/__tmp_2f08f8e0.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->has_error = 0;
      |     ^~~~~~
